Improvements to tfg-deploy.sh and remove harbor-deploy.sh

--- a/helms/harbor/values.yaml
+++ b/helms/harbor/values.yaml
@@ -109,7 +109,7 @@ expose:
 # the IP address of k8s node
 #
 # If Harbor is deployed behind the proxy, set it as the URL of proxy
-externalURL: http://192.168.1.101:30002
+externalURL: http://${NODE_IP}:30002
 
 # The persistence is enabled by default and a default StorageClass
 # is needed in the k8s cluster to provision volumes dynamically.
