Use opentwins path from env variable

--- a/.env.template
+++ b/.env.template
@@ -14,3 +14,4 @@ export INFLUXDB_URL="http://opentwins-influxdb2.opentwins:80"
 export MYSQL_HOSTNAME="mysql.mysql"
 export MYSQL_USER="root"
 export MYSQL_DATABASE="emtdata"
+export OPENTWINS_FORK_PATH="<path/to/opentwins/fork"
